# Mythera-Launcher

./: .env.production  .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  icons.tsx  index.css  main.tsx  mc-bridge.dev.ts  mc-bridge.ts  skin-face.tsx  skin-preview-3d.tsx  vite-env.d.ts  window-controls.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  http.rs  install.rs  jre.rs  launch.rs  launch_args.rs  lib.rs  main.rs  offline_uuid.rs  resolver.rs  state.rs  store.rs  sync.rs  sync_plan.rs  updater.rs  version_gate.rs
