[package]
name = "mythera-launcher"
version = "1.0.14"
description = "Mythera Minecraft Launcher"
authors = ["Mythera"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mythera_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "fs", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
futures-util = "0.3"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
semver = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Token storage in the OS keychain. Windows-only backend for now (Credential Manager); add
# apple-native / sync-secret-service when building mac/linux.
keyring = { version = "3", features = ["windows-native"] }
thiserror = "2"
# Native folder picker for the Settings "Browse" button (game directory). default-features=false avoids
# pulling an async runtime / the Linux GTK backend — the Windows native dialog is always compiled.
rfd = { version = "0.15", default-features = false }

# Smaller release binary -> smaller installer. LTO + size-opt + strip symbols. (panic=abort is omitted
# so `cargo test --release` keeps the unwinding the test harness needs.)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
